<resources>
    <string name="app_name">WeatherApp</string>
    <string name="location_name">Port Louis, Mauritius</string>
    <string name="date_time">Monday, 6:00 AM</string>
    <string name="weather">Storm</string>
    <string name="temperature">20</string>
    <string name="degree">°</string>
    <string name="max_temp">Max: 25 C</string>
    <string name="min_temp">Min: 15 C</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="the_day_after">day_after</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="interval">Set Interval</string>
    <string name="developer">Developer: Yonas</string>
    <string name="version">Version: 1.0</string>
    <string name="settings">Settings</string>
</resources>
