<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/interval"
        android:enabled="true"
        android:title="@string/interval"
        android:icon="@drawable/ic_access_time_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/developer"
        android:enabled="true"
        android:title="@string/developer"
        android:icon="@drawable/ic_person_outline_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/version"
        android:enabled="true"
        android:title="@string/version"
        android:icon="@drawable/ic_loop_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>